Fixed cross on mobile; added tip of the day close

--- a/client/styles/media-queries.css
+++ b/client/styles/media-queries.css
@@ -154,6 +154,13 @@
 
     .close-cross {
         float: none;
+        display: inline-block;
+        width: 2em;
+        height: 2em;
+        position: absolute;
+        right: 5%;
+        top: 25%;
+        left: auto;
     }
 
     .allocation {
